# toy

./: README.md  codegen.toy  inception.toy  mobilenet.toy  resnet.toy
examples/toy/: CMakeLists.txt  out.py  out_main.py  out_residual_unit.py
examples/toy/Ch2/mlir/: Dialect.cpp
examples/toy/Ch8/: CMakeLists.txt  toyc.cpp
examples/toy/Ch8-2/: toyc.cpp
examples/toy/Ch8-2/mlir/: LowerToRelay.cpp  translateModuleToRelayIR.cpp
examples/toy/Ch8/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  RelayDialect.h  RelayIR.h  RelayOps.td  ShapeInferenceInterface.h
examples/toy/Ch8/mlir/: DeadFunctionEliminationPass.cpp  Dialect.cpp  LowerToLLVM.cpp  LowerToRelay.cpp  MLIRGen.cpp  RelayDialect.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td  translateModuleToRelayIR.cpp
examples/toy/Ch8/parser/: AST.cpp
examples/toy/Ch9/: CMakeLists.txt  toyc.cpp
examples/toy/Ch9/include/toy/: CMakeLists.txt  RelayDialect.h
examples/toy/Ch9/mlir/: RelayDialect.cpp
lib/IR/: SymbolTable.cpp
test/: CMakeLists.txt
test/Examples/Toy/Ch6/: conv2d.toy
tvm/python/tvm/relay/testing/: __init__.py  config.py  inception_v3.py  inception_v3_2.py  mobilenet_v2.py  resnet.py  resnet_v2.py
tvm/tutorials/: autotest.py  command  relay_test_net.py  test.txt
tvm/tutorials/autotvm/: test_conv2d.py  test_conv2d_multiprocess.py  tune_relay_cuda.py
